Update issue routing setting

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
           routerLinkActive="active"
           *ngIf="isPrincipal || isDirector || isSchoolNormalEmp"
         >
-          <a class="" [routerLink]="['/issuelist']">
+          <a class="" [routerLink]="['/issue']">
             <div>
               <i class="bi bi-list-check"></i>
               &nbsp; Kế hoạch kiểm tra
