--- a/src/app/features/post-login/issue/component/issue-list-right-side/issue-list-right-side.component.scss
+++ b/src/app/features/post-login/issue/component/issue-list-right-side/issue-list-right-side.component.scss
@@ -1,5 +1,5 @@
-@import "../../../../../../../assets/scss/base";
-@import "../../../../../../../assets/scss/prime-custom";
+@import "../../../../../../assets/scss/base";
+@import "../../../../../../assets/scss/prime-custom";
 :host ::ng-deep {
   .p-button {
     background-color: $primary;
