Update inspection plan routing setting

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -47,7 +47,7 @@
           routerLinkActive="active"
           *ngIf="isPrincipal || isDirector"
         >
-          <a class="" [routerLink]="['/inspection_plan']">
+          <a class="" [routerLink]="['/inspection-plan']">
             <div>
               <i class="bi bi-file-earmark-person"></i>
               &nbsp; Thanh tra
