--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -101,7 +101,7 @@
           <div class="file-item py-1 d-flex"
                (click)="openNewTab(inspectionPlanDetail.inspectionPlan.documents[0]?.documentLink)">
             <div class="file-item-icon d-flex justify-content-center align-items-center">
-              <img src="assets/img/pdf_logo.svg" alt=""/>
+              <img src="../../../../../assets/img/pdf_logo.svg" alt=""/>
             </div>
             <div class="row col-md-10 d-flex align-items-end mb-3">
               <div class="col-md-8">
