Update guidance document routing setting

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -59,7 +59,7 @@
           routerLinkActive="active"
 
         >
-          <a class="" [routerLink]="['/guidanceDocument']" *ngIf="!isAdmin">
+          <a class="" [routerLink]="['/guidance-document']" *ngIf="!isAdmin">
             <div>
               <i class="bi bi-clipboard2-check"></i>
               &nbsp; Văn bản bổ sung
