--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -35,7 +35,7 @@
           routerLinkActive="active"
           *ngIf="isDirector || isPrincipal"
         >
-          <a class="" [routerLink]="['/schoolinitiationplan']">
+          <a class="" [routerLink]="['/school-initiation-plan']">
             <div>
               <i class="bi bi-clock"></i>
               &nbsp; Kế hoạch thực hiện
