--- a/src/app/features/post-login/school/school-list/school-list.component.scss
+++ b/src/app/features/post-login/school/school-list/school-list.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../assets/scss/base";
+@import "../../../../../assets/scss/base";
 .fontAwesome {
   font-family: Arial, "Font Awesome 5 Free";
 }
