Update user list routing setting

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -124,7 +124,7 @@
           routerLinkActive="active"
           *ngIf="isPrincipal || isDirector || isAdmin"
         >
-          <a class="" [routerLink]="['/userList']">
+          <a class="" [routerLink]="['/user']">
             <div>
               <i class="bi bi-people"></i>
               &nbsp; Danh sách người dùng
