--- a/src/styles.scss
+++ b/src/styles.scss
@@ -102,3 +102,9 @@ ul {
   padding: 0 !important;
   margin: 0 !important;
 }
+.span-heading-color {
+  color: #616161;
+}
+.p-content-fs {
+  font-size: 18px;
+}
