--- a/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.scss
+++ b/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.scss
@@ -1,7 +1,6 @@
 @import "../../../../../assets/scss/base";
 
 .issue-detail {
-    margin-left: 10px;
     font-size: 16px;
 }
 .scrollview-item {
@@ -11,10 +10,10 @@
         height: 60px;
     }
     &:hover {
-        background-color: $primary-hover;
+        background-color: rgb(245, 245, 245);
         transition: all 0.5s ease;
-        border-radius: 10px;
-        color: #fff;
+        // border-radius: 10px;
+        // color: #fff;
     }
     .scrollview-item-content {
         font-size: 16px;
@@ -45,6 +44,7 @@
     }
 }
 .list-inspector {
+    height: 100%;
     border-radius: 10px;
     // border: 0.8px solid $primary;
     box-shadow:
