--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -57,9 +57,6 @@
         border-radius: 15px 15px 0px 0px;
     }
 }
-p {
-    font-size: 16px;
-}
 .input-file {
     height: 100%;
     width: 100%;
@@ -228,6 +225,6 @@ input {
     height: 400px;
     width: 400px;
 }
-.height-80 {
-    height: 80px;
-}
+// .height-80 {
+//     height: 80px;
+// }
