--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -407,37 +407,48 @@
 
         <div
           *ngIf="schoolinitiationplan?.status.statusId != 6"
-          class="plan-file-item d-flex"
+          class="file-item py-1 d-flex"
           (click)="openNewTab(lastDocs.schoolDocument?.documentLink)"
+          pTooltip="{{ lastDocs.schoolDocument.documentName }}.pdf"
+          tooltipPosition="top"
         >
           <div
-            class="plan-file-item-img d-flex justify-content-center align-items-center"
+            class="file-item-icon d-flex justify-content-center align-items-center"
           >
-            <img src="../../../../../assets/img/pdf.png" alt="" />
+            <img src="assets/img/pdf_logo.svg" alt="" />
           </div>
-          <div class="plan-file-item-content" *ngIf="lastDocs?.schoolDocument">
-            <div class="col-md-10 p-2">
-              <span class="font-weight-bold">
-                {{ lastDocs.schoolDocument.documentName }}
-              </span>
-              <br />
-              <span class="font-weight-bold">Mã: </span>
-              <span class="text-black-50">{{
-                lastDocs.schoolDocument.documentCode
-              }}</span>
-              <br />
-              <span class="text-black-50">{{
-                lastDocs.schoolDocument.sizeFormat
-              }}</span>
-              <br />
-              <span class="text-black-50">{{
-                lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
-              }}</span>
+          <div class="row col-md-10 d-flex align-items-end mb-3">
+            <div class="col-md-8">
+              <p class="mb-0">
+                <span class="fw-bold"
+                  >{{ lastDocs.schoolDocument.documentName }}.pdf</span
+                ><span></span>
+              </p>
+              <p class="mb-0">
+                <span>Mã tài liệu: </span>
+                <span class="fw-bold">{{
+                  lastDocs.schoolDocument.documentCode
+                }}</span>
+              </p>
+            </div>
+            <div class="col-md-4 text-end">
+              <p class="mb-0">
+                <span>Kích thước: </span>
+                <span class="fw-bold">{{
+                  lastDocs.schoolDocument.sizeFormat
+                }}</span>
+              </p>
+              <p class="mb-0">
+                <span>Ngày tạo: </span>
+                <span class="fw-bold">{{
+                  lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
+                }}</span>
+              </p>
             </div>
           </div>
         </div>
       </div>
-    </div>  
+    </div>
     <div class="col-md-5">
       <div class="upload">
         <div class="py-4 header text-center">
@@ -522,33 +533,44 @@
         >
           <div class="px-4 my-4">
             <div
-              class="plan-file-item d-flex"
+              class="file-item py-1 d-flex"
               (click)="openNewTab(lastDocs.departmentDocument?.documentLink)"
+              pTooltip="{{ lastDocs.departmentDocument.documentName }}.pdf"
+              tooltipPosition="top"
             >
               <div
-                class="plan-file-item-img d-flex justify-content-center align-items-center"
+                class="file-item-icon d-flex justify-content-center align-items-center"
               >
-                <img src="../../../../../assets/img/pdf.png" alt="" />
+                <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="plan-file-item-content row">
-                <div class="col-md-10 p-2">
-                  <span class="font-weight-bold">
-                    {{ lastDocs.departmentDocument?.documentName }}
-                  </span>
-                  <br />
-                  <span class="font-weight-bold">Mã: </span
-                  ><span class="text-black-50">{{
-                    lastDocs.departmentDocument?.documentCode
-                  }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    lastDocs.departmentDocument?.sizeFormat
-                  }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    lastDocs.departmentDocument?.uploadedDate
-                      | date : "dd/MM/yyyy"
-                  }}</span>
+              <div class="row col-md-10 d-flex align-items-end mb-3">
+                <div class="col-md-8">
+                  <p class="mb-0">
+                    <span class="fw-bold"
+                      >{{ lastDocs.departmentDocument.documentName }}.pdf</span
+                    ><span></span>
+                  </p>
+                  <p class="mb-0">
+                    <span>Mã tài liệu: </span>
+                    <span class="fw-bold">{{
+                      lastDocs.departmentDocument.documentCode
+                    }}</span>
+                  </p>
+                </div>
+                <div class="col-md-4 text-end">
+                  <p class="mb-0">
+                    <span>Kích thước: </span>
+                    <span class="fw-bold">{{
+                      lastDocs.departmentDocument.sizeFormat
+                    }}</span>
+                  </p>
+                  <p class="mb-0">
+                    <span>Ngày tạo: </span>
+                    <span class="fw-bold">{{
+                      lastDocs.departmentDocument.uploadedDate
+                        | date : "dd/MM/yyyy"
+                    }}</span>
+                  </p>
                 </div>
               </div>
             </div>
