fix and css initiation plan

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -433,13 +433,13 @@
             </div>
             <div class="col-md-4 text-end">
               <p class="mb-0">
-                <span>Kích thước: </span>
+                <!-- <span>Kích thước: </span> -->
                 <span class="fw-bold">{{
                   lastDocs.schoolDocument.sizeFormat
                 }}</span>
               </p>
               <p class="mb-0">
-                <span>Ngày tạo: </span>
+                <!-- <span>Ngày tạo: </span> -->
                 <span class="fw-bold">{{
                   lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
                 }}</span>
@@ -559,13 +559,13 @@
                 </div>
                 <div class="col-md-4 text-end">
                   <p class="mb-0">
-                    <span>Kích thước: </span>
+                    <!-- <span>Kích thước: </span> -->
                     <span class="fw-bold">{{
                       lastDocs.departmentDocument.sizeFormat
                     }}</span>
                   </p>
                   <p class="mb-0">
-                    <span>Ngày tạo: </span>
+                    <!-- <span>Ngày tạo: </span> -->
                     <span class="fw-bold">{{
                       lastDocs.departmentDocument.uploadedDate
                         | date : "dd/MM/yyyy"
