--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -271,7 +271,7 @@
     </p-dialog>
   </form>
 
-  <div class="row">
+  <div class="row" *ngIf="schoolinitiationplan">
     <div class="col-md-7 plan">
       <div class="plan-content">
         <!-- dong 1 -->
@@ -360,32 +360,42 @@
         <ng-container *ngIf="lastDocs?.departmentDocument">
           <div
             *ngIf="schoolinitiationplan?.status.statusId != 6"
-            class="plan-file-item d-flex"
+            class="file-item py-1 d-flex"
             (click)="openNewTab(lastDocs.departmentDocument.documentLink)"
           >
             <div
-              class="plan-file-item-img d-flex justify-content-center align-items-center"
+              class="file-item-icon d-flex justify-content-center align-items-center"
             >
-              <img src="../../../../../assets/img/pdf.png" alt="" />
+              <img src="assets/img/pdf_logo.svg" alt="" />
             </div>
-            <div class="plan-file-item-content">
-              <div class="col-md-10 p-2">
-                <span class="font-weight-bold">
-                  {{ lastDocs.departmentDocument?.documentName }}
-                </span>
-                <br />
-                <span class="font-weight-bold">Mã: </span>
-                <span class="text-black-50">{{
-                  lastDocs.departmentDocument.documentCode
-                }}</span>
-                <br />
-                <span class="text-black-50">{{
-                  lastDocs.departmentDocument.sizeFormat
-                }}</span>
-                <br />
-                <span class="text-black-50">{{
-                  lastDocs.departmentDocument.uploadedDate | date : "dd/MM/yyyy"
-                }}</span>
+            <div class="row col-md-10 d-flex align-items-end mb-3">
+              <div class="col-md-8">
+                <p class="mb-0">
+                  <span class="fw-bold"
+                    >{{ lastDocs.departmentDocument.documentName }}.pdf</span
+                  ><span></span>
+                </p>
+                <p class="mb-0">
+                  <span>Mã tài liệu: </span>
+                  <span class="fw-bold">{{
+                    lastDocs.departmentDocument.documentCode
+                  }}</span>
+                </p>
+              </div>
+              <div class="col-md-4 text-end">
+                <p class="mb-0">
+                  <!-- <span>Kích thước: </span> -->
+                  <span class="fw-bold">{{
+                    lastDocs.departmentDocument.sizeFormat
+                  }}</span>
+                </p>
+                <p class="mb-0">
+                  <!-- <span>Ngày tạo: </span> -->
+                  <span class="fw-bold">{{
+                    lastDocs.departmentDocument.uploadedDate
+                      | date : "dd/MM/yyyy"
+                  }}</span>
+                </p>
               </div>
             </div>
           </div>
@@ -417,38 +427,51 @@
           </div>
 
           <div *ngIf="fileStatus" class="px-4 my-4">
-            <div class="plan-file-item d-flex">
+            <div
+              class="file-item py-1 d-flex"
+              (click)="displayNewFileUpload(newFile)"
+              pTooltip="{{ lastDocs.departmentDocument.documentName }}.pdf"
+              tooltipPosition="top"
+            >
               <div
-                class="plan-file-item-img d-flex justify-content-center align-items-center"
+                class="file-item-icon d-flex justify-content-center align-items-center"
               >
-                <img src="../../../../../assets/img/pdf.png" alt="" />
+                <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div
-                class="plan-file-item-content row"
-                (click)="displayNewFileUpload(newFile)"
-              >
-                <div class="col-md-10 p-2">
-                  <span class="font-weight-bold">
-                    {{ inputFileForm.get("documentName")?.value }}
-                  </span>
-                  <br />
-                  <span class="font-weight-bold">Mã: </span
-                  ><span class="text-black-50">{{
-                    inputFileForm.get("documentCode")?.value
-                  }}</span>
-                  <br />
-                  <span class="text-black-50">{{ getSize(newFile.size) }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    newFile.dateModified | date
-                  }}</span>
+              <div class="row col-md-10 d-flex align-items-end">
+                <div class="col-md-6 mb-3">
+                  <p class="mb-0">
+                    <span class="fw-bold"
+                      >{{ inputFileForm.get("documentName")?.value }}.pdf</span
+                    >
+                    <span></span>
+                  </p>
+                  <p class="mb-0">
+                    <span>Mã tài liệu: </span>
+                    <span class="fw-bold">{{
+                      inputFileForm.get("documentCode")?.value
+                    }}</span>
+                  </p>
+                </div>
+                <div class="col-md-4 mb-3 text-end">
+                  <p class="mb-0">
+                    <!-- <span>Kích thước: </span> -->
+                    <span class="fw-bold">{{ getSize(newFile.size) }}</span>
+                  </p>
+                  <p class="mb-0">
+                    <!-- <span>Ngày tạo: </span> -->
+                    <span class="fw-bold">{{
+                      today | date : "dd/MM/yyyy"
+                    }}</span>
+                  </p>
                 </div>
                 <div
-                  class="col-md-2 d-flex justify-content-center align-items-center"
+                  class="align-self-center col-md-2 d-flex justify-content-center align-items-center"
                 >
                   <div
+                    *ngIf="iconStatus"
                     class="delete-icon d-flex justify-content-center align-items-center"
-                    (click)="deleteFile()"
+                    (click)="deleteFile($event)"
                   >
                     <i class="bi bi-x-lg"></i>
                   </div>
@@ -477,42 +500,106 @@
                 hết hạn nên không thể chỉnh sửa</span
               >
             </div>
-            <div class="plan-file-item d-flex">
+            <div
+              *ngIf="inputFileForm.get('documentName')?.value"
+              class="file-item py-1 d-flex"
+              (click)="displayNewFileUpload(newFile)"
+              pTooltip="{{ inputFileForm.get('documentName')?.value }}.pdf"
+              tooltipPosition="top"
+            >
               <div
-                class="plan-file-item-img d-flex justify-content-center align-items-center"
+                class="file-item-icon d-flex justify-content-center align-items-center"
               >
-                <img src="../../../../../assets/img/pdf.png" alt="" />
+                <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div
-                class="plan-file-item-content row"
-                (click)="openNewTab(lastDocs.schoolDocument.documentLink)"
-              >
-                <div class="col-md-10 p-2">
-                  <span class="font-weight-bold">
-                    {{ lastDocs.schoolDocument.documentName }}
-                  </span>
-                  <br />
-                  <span class="font-weight-bold">Mã: </span
-                  ><span>{{ lastDocs.schoolDocument.documentCode }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    lastDocs.schoolDocument.sizeFormat
-                  }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
-                  }}</span>
+              <div class="row col-md-10 d-flex align-items-end">
+                <div class="col-md-6 mb-3">
+                  <p class="mb-0">
+                    <span class="fw-bold"
+                      >{{ inputFileForm.get("documentName")?.value }}.pdf</span
+                    >
+                    <span></span>
+                  </p>
+                  <p class="mb-0">
+                    <span>Mã tài liệu: </span>
+                    <span class="fw-bold">{{
+                      inputFileForm.get("documentCode")?.value
+                    }}</span>
+                  </p>
+                </div>
+                <div class="col-md-4 mb-3 text-end">
+                  <p class="mb-0">
+                    <!-- <span>Kích thước: </span> -->
+                    <span class="fw-bold">{{ getSize(newFile.size) }}</span>
+                  </p>
+                  <p class="mb-0">
+                    <!-- <span>Ngày tạo: </span> -->
+                    <span class="fw-bold">{{
+                      today | date : "dd/MM/yyyy"
+                    }}</span>
+                  </p>
+                </div>
+                <div
+                  class="align-self-center col-md-2 d-flex justify-content-center align-items-center"
+                >
+                  <div
+                    *ngIf="iconStatus"
+                    class="delete-icon d-flex justify-content-center align-items-center"
+                    (click)="deleteFile($event)"
+                  >
+                    <i class="bi bi-x-lg"></i>
+                  </div>
                 </div>
               </div>
+            </div>
+            <div
+              *ngIf="!inputFileForm.get('documentName')?.value"
+              class="file-item py-1 d-flex"
+              (click)="openNewTab(lastDocs.schoolDocument?.documentLink)"
+              pTooltip="{{ lastDocs.schoolDocument.documentName }}.pdf"
+              tooltipPosition="top"
+            >
               <div
-                class="col-md-2 d-flex justify-content-center align-items-center"
+                class="file-item-icon d-flex justify-content-center align-items-center"
               >
+                <img src="assets/img/pdf_logo.svg" alt="" />
+              </div>
+              <div class="row col-md-10 d-flex align-items-end">
+                <div class="col-md-6 mb-3">
+                  <p class="mb-0">
+                    <span class="fw-bold"
+                      >{{ lastDocs.schoolDocument.documentName }}.pdf</span
+                    ><span></span>
+                  </p>
+                  <p class="mb-0">
+                    <span>Mã tài liệu: </span>
+                    <span class="fw-bold">{{
+                      lastDocs.schoolDocument.documentCode
+                    }}</span>
+                  </p>
+                </div>
+                <div class="col-md-4 text-end mb-3">
+                  <p class="mb-0">
+                    <span class="fw-bold">{{
+                      lastDocs.schoolDocument.sizeFormat
+                    }}</span>
+                  </p>
+                  <p class="mb-0">
+                    <span class="fw-bold">{{
+                      lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
+                    }}</span>
+                  </p>
+                </div>
                 <div
-                  *ngIf="iconStatus"
-                  class="delete-icon d-flex justify-content-center align-items-center"
-                  (click)="deleteFile()"
+                  class="align-self-center col-md-2 d-flex justify-content-center align-items-center"
                 >
-                  <i class="bi bi-x-lg"></i>
+                  <div
+                    *ngIf="iconStatus"
+                    class="delete-icon d-flex justify-content-center align-items-center"
+                    (click)="deleteFile($event)"
+                  >
+                    <i class="bi bi-x-lg"></i>
+                  </div>
                 </div>
               </div>
             </div>
@@ -550,30 +637,43 @@
         <ng-container *ngIf="schoolinitiationplan?.status.statusId == 8">
           <div class="px-4 my-4">
             <div
-              class="plan-file-item d-flex"
-              (click)="openNewTab(lastDocs.departmentDocument.documentLink)"
+              class="file-item py-1 d-flex"
+              (click)="openNewTab(lastDocs.schoolDocument?.documentLink)"
+              pTooltip="{{ lastDocs.schoolDocument.documentName }}.pdf"
+              tooltipPosition="top"
             >
               <div
-                class="plan-file-item-img d-flex justify-content-center align-items-center"
+                class="file-item-icon d-flex justify-content-center align-items-center"
               >
-                <img src="../../../../../assets/img/pdf.png" alt="" />
+                <img src="assets/img/pdf_logo.svg" alt="" />
               </div>
-              <div class="plan-file-item-content row">
-                <div class="col-md-10 p-2">
-                  <span class="font-weight-bold">
-                    {{ lastDocs.schoolDocument.documentName }}
-                  </span>
-                  <br />
-                  <span class="font-weight-bold">Mã: </span
-                  ><span>{{ lastDocs.schoolDocument.documentCode }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    lastDocs.schoolDocument.sizeFormat
-                  }}</span>
-                  <br />
-                  <span class="text-black-50">{{
-                    lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
-                  }}</span>
+              <div class="row col-md-10 d-flex align-items-end mb-3">
+                <div class="col-md-8">
+                  <p class="mb-0">
+                    <span class="fw-bold"
+                      >{{ lastDocs.schoolDocument.documentName }}.pdf</span
+                    ><span></span>
+                  </p>
+                  <p class="mb-0">
+                    <span>Mã tài liệu: </span>
+                    <span class="fw-bold">{{
+                      lastDocs.schoolDocument.documentCode
+                    }}</span>
+                  </p>
+                </div>
+                <div class="col-md-4 text-end">
+                  <p class="mb-0">
+                    <!-- <span>Kích thước: </span> -->
+                    <span class="fw-bold">{{
+                      lastDocs.schoolDocument.sizeFormat
+                    }}</span>
+                  </p>
+                  <p class="mb-0">
+                    <!-- <span>Ngày tạo: </span> -->
+                    <span class="fw-bold">{{
+                      lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
+                    }}</span>
+                  </p>
                 </div>
               </div>
             </div>
