--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.scss
@@ -8,46 +8,80 @@
 .plan-content {
     // border-bottom: solid 1px $primary;
 }
-.plan-file-item {
-    cursor: pointer;
-    height: 160px;
+// .plan-file-item {
+//     cursor: pointer;
+//     height: 160px;
+//     background-color: #f9fafb;
+//     border-radius: 10px;
+//     font-size: 16px;
+//     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+//     transition: all 0.6s ease;
+//     &:hover {
+//         cursor: pointer;
+//         background-color: rgb(244, 244, 244);
+//     }
+//     .plan-file-item-img {
+//         width: 30%;
+//         border-radius: 15px 0 0 15px;
+//     }
+//     .plan-file-item-content {
+//         width: 70%;
+//         // background-color: #ffd4cf;
+//         font-size: 16px;
+//         border-radius: 0px 15px 15px 0px;
+//         margin: 0;
+//         .delete-icon {
+//             i {
+//                 font-size: 30px;
+//                 color: rgb(172, 172, 172);
+//             }
+//             &:hover {
+//                 i {
+//                     transition: all 0.3s ease;
+//                     color: rgb(220, 220, 220);
+//                 }
+//             }
+//         }
+//     }
+// }
+.delete-icon {
+    i {
+        font-size: 30px;
+        color: rgb(172, 172, 172);
+    }
+    &:hover {
+        i {
+            transition: all 0.3s ease;
+            color: rgb(220, 220, 220);
+        }
+    }
+}
+
+.file-item {
     background-color: #f9fafb;
     border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    transition: all 0.6s ease;
+
+    .file-item-icon {
+        img {
+            width: 100%;
+            height: 100px;
+        }
+    }
+
+    .file-item-content {
+        height: 100%;
+        margin: 0;
+    }
+
     &:hover {
         cursor: pointer;
         background-color: rgb(244, 244, 244);
     }
-    .plan-file-item-img {
-        width: 30%;
-        border-radius: 15px 0 0 15px;
-    }
-    .plan-file-item-content {
-        width: 70%;
-        // background-color: #ffd4cf;
-        font-size: 16px;
-        border-radius: 0px 15px 15px 0px;
-        margin: 0;
-        .delete-icon {
-            i {
-                font-size: 30px;
-                color: rgb(172, 172, 172);
-            }
-            &:hover {
-                i {
-                    transition: all 0.3s ease;
-                    color: rgb(220, 220, 220);
-                }
-            }
-        }
-    }
 }
 .upload {
-    box-shadow:
-        rgba(0, 0, 0, 0.25) 0px 14px 28px,
-        rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     width: 100%;
     border-radius: 15px;
     height: 100%;
@@ -56,9 +90,6 @@
         color: #fff;
         border-radius: 15px 15px 0px 0px;
     }
-}
-p {
-    font-size: 16px;
 }
 .input-file {
     height: 100%;
