fix css school initiationplan

--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.html
@@ -575,7 +575,8 @@
               </div>
             </div>
             <div class="mt-5 d-flex justify-content-center align-items-center">
-              <span>Kết quả đánh giá:</span> &nbsp;&nbsp;
+              <span class="p-content-fs fw-medium">Kết quả đánh giá:</span>
+              &nbsp;&nbsp;
               <p-tag
                 *ngIf="
                   schoolinitiationplan?.status.statusId >= 6 &&
