--- a/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue-list/update-issue/update-issue.component.html
@@ -34,7 +34,7 @@
         [paginator]="true"
         currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
         [filterDelay]="0"
-        [globalFilterFields]="['user.fullName ', 'role', 'school']"
+        [globalFilterFields]="['user.fullName ', 'role', 'school.schoolName']"
       >
         <ng-template pTemplate="caption">
           <div
