--- a/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.html
@@ -17,52 +17,51 @@
       header="Tài liệu không có hiệu lực"
       [modal]="true"
       [(visible)]="popupInvalidDocVisible"
-      [style]="{ width: '80vw' }"
+      [style]="{ width: '60vw' }"
       [draggable]="false"
       [resizable]="false"
     >
-      <ng-container *ngFor="let item of issue.documentDtos">
+      <ng-container *ngFor="let document of issue.documentDtos">
         <div
-          *ngIf="item.status.statusId == 2"
-          class="mb-3"
-          (click)="openNewTab(item.documentLink)"
+          *ngIf="document.status.statusId == 2"
+          class="file-item py-1 d-flex mt-2"
+          (click)="openNewTab(document.documentLink)"
         >
-          <div class="file-item px-3 py-1 d-flex">
-            <div
-              class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
-            >
-              <img src="../../../../../assets/img/pdf.png" alt="" />
+          <div
+            class="file-item-icon d-flex justify-content-center align-items-center"
+          >
+            <img src="assets/img/pdf_logo.svg" alt="" />
+          </div>
+          <div class="row col-md-10 d-flex align-items-end mb-3">
+            <div class="col-md-8">
+              <p class="mb-0">
+                <span class="fw-bold">{{ document.documentName }}</span>
+                <span class="fw-bold">.pdf</span>
+              </p>
+              <p class="mb-0">
+                <span>Loại tài liệu: </span>
+                <span class="fw-bold">{{
+                  document.documentType.documentTypeName
+                }}</span>
+              </p>
+              <p class="mb-0">
+                <span>Mã tài liệu: </span>
+                <span class="fw-bold">{{ document.documentCode }}</span>
+              </p>
             </div>
-            <div class="file-item-content">
-              <div class="row ms-5">
-                <div class="col-md-10">
-                  <span class="font-weight-bold font-size-18">
-                    {{ item.documentName + "." + item.fileExtension }}
-                  </span>
-                  <br />
-                  <span>
-                    <span class="font-weight-bold">Loại TL:</span>
-                    {{ item.documentType.documentTypeName }}</span
-                  >
-                  <br />
-                  <span
-                    ><span class="font-weight-bold">Mã:</span>
-                    {{ item.documentCode }}</span
-                  >
-                </div>
-                <div class="col-md-2">
-                  <span>{{ item.sizeFormat }}</span>
-                  <br />
-                  <span>{{ item.uploadedDate | date : "MM/dd/yyyy" }}</span>
-                </div>
-              </div>
-            </div>
-            <div
-              class="mx-auto d-flex justify-content-center align-items-center"
-            >
-              <p-tag class="status" [severity]="'danger'" [rounded]="true">
-                {{ item.status.statusName }}
-              </p-tag>
+            <div class="col-md-4 text-end">
+              <p class="mb-0">
+                <span>Kích thước: </span>
+                <span class="fw-bold">{{
+                  document.size | fileSizePipe : "MB"
+                }}</span>
+              </p>
+              <p class="mb-0">
+                <span>Ngày tạo: </span>
+                <span class="fw-bold">{{
+                  document.uploadedDate | date : "dd/MM/yyyy"
+                }}</span>
+              </p>
             </div>
           </div>
         </div>
@@ -93,56 +92,56 @@
       </div>
       <div>
         <h6 class="mat-headline-6">Tài liệu công văn</h6>
-        <button
-          class="mb-3"
-          type="button"
-          pButton
-          (click)="togglePopupInvalidDoc()"
-        >
+        <button type="button" pButton (click)="togglePopupInvalidDoc()">
           Xem tài liệu không có hiệu lực
         </button>
-        <ng-container *ngFor="let item of issue.documentDtos | sortById">
+        <ng-container *ngFor="let document of issue.documentDtos | sortById">
           <div
-            *ngIf="item.status.statusId == 1"
-            class="mt-3"
-            (click)="openNewTab(item.documentLink)"
+            *ngIf="document.status.statusId == 1"
+            class="file-item py-1 d-flex mt-2"
+            (click)="openNewTab(document.documentLink)"
+            pTooltip="{{ document.documentName }}"
+            tooltipPosition="top"
           >
-            <div class="file-item px-3 py-1 d-flex">
-              <div
-                class="file-item-icon ml-5 d-flex justify-content-center align-items-center"
-              >
-                <img src="../../../../../assets/img/pdf.png" alt="" />
+            <div
+              class="file-item-icon d-flex justify-content-center align-items-center"
+            >
+              <img src="assets/img/pdf_logo.svg" alt="" />
+            </div>
+            <div
+              class="row col-md-10 d-flex align-items-end mb-3 file-item-content"
+            >
+              <div class="col-md-8">
+                <p class="mb-0 document-name">
+                  <span class="fw-bold span-doc-name">{{
+                    document.documentName
+                  }}</span>
+                  <span class="fw-bold">.pdf</span>
+                </p>
+                <p class="mb-0">
+                  <span>Loại tài liệu: </span>
+                  <span class="fw-bold">{{
+                    document.documentType.documentTypeName
+                  }}</span>
+                </p>
+                <p class="mb-0">
+                  <span>Mã tài liệu: </span>
+                  <span class="fw-bold">{{ document.documentCode }}</span>
+                </p>
               </div>
-              <div class="file-item-content">
-                <div class="row ms-5">
-                  <div class="col-md-10">
-                    <span class="font-weight-bold font-size-18">{{
-                      item.documentName + "." + item.fileExtension
-                    }}</span>
-                    <br />
-                    <span>
-                      <span class="font-weight-bold">Loại TL:</span>
-                      {{ item.documentType.documentTypeName }}</span
-                    >
-                    <br />
-                    <span
-                      ><span class="font-weight-bold">Mã:</span>
-                      {{ item.documentCode }}</span
-                    >
-                  </div>
-                  <div class="col-md-2">
-                    <span>{{ item.sizeFormat }}</span>
-                    <br />
-                    <span>{{ item.uploadedDate | date : "MM/dd/yyyy" }}</span>
-                  </div>
-                </div>
-              </div>
-              <div
-                class="mx-auto d-flex justify-content-center align-items-center"
-              >
-                <p-tag class="status" [severity]="'success'" [rounded]="true">
-                  {{ item.status.statusName }}
-                </p-tag>
+              <div class="col-md-4 text-end">
+                <p class="mb-0">
+                  <span>Kích thước: </span>
+                  <span class="fw-bold">{{
+                    document.size | fileSizePipe : "MB"
+                  }}</span>
+                </p>
+                <p class="mb-0">
+                  <span>Ngày tạo: </span>
+                  <span class="fw-bold">{{
+                    document.uploadedDate | date : "dd/MM/yyyy"
+                  }}</span>
+                </p>
               </div>
             </div>
           </div>
