--- a/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.scss
+++ b/src/app/features/post-login/issue-list/issue-detail/issue-detail.component.scss
@@ -23,21 +23,33 @@
     }
 }
 .file-item {
-    height: 90px;
     background-color: #f9fafb;
-    // border: 0.8px solid rgb(169, 169, 169);
     border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    .file-item-content {
-        width: 600px;
-    }
+
     .file-item-icon {
         img {
-            width: 50px;
-            height: 50px;
+            width: 100%;
+            height: 100px;
         }
     }
+
+    .file-item-content {
+        p {
+            white-space: nowrap;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            .span-doc-name {
+                flex-shrink: 1;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+    }
+
     &:hover {
         cursor: pointer;
         background-color: rgb(244, 244, 244);
