--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
@@ -1,6 +1,9 @@
 @import "../../../../../assets/scss/base";
+* {
+    font-size: 16px;
+}
 .p-button {
-    padding: 16px 24px;
+    font-size: 16px;
     background-color: $primary;
     border-radius: 8px;
     border: solid 1px $primary;
