--- a/src/app/features/post-login/issue/update-issue/update-issue.component.scss
+++ b/src/app/features/post-login/issue/update-issue/update-issue.component.scss
@@ -53,27 +53,33 @@ textarea {
     }
 }
 .file-item {
-    height: 90px;
     background-color: #f9fafb;
-    // border: 0.8px solid rgb(169, 169, 169);
     border-radius: 10px;
     font-size: 16px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    .file-item-content {
-        width: 600px;
-        span {
-            max-width: 100%;
-            white-space: wrap; /* Prevent text from wrapping */
-            overflow: hidden; /* Hide overflowing text */
-            text-overflow: ellipsis; /* Display ellipsis for overflowing text */
-        }
-    }
+
     .file-item-icon {
         img {
-            width: 50px;
-            height: 50px;
+            width: 100%;
+            height: 100px;
         }
     }
+
+    .file-item-content {
+        p {
+            white-space: nowrap;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            .span-doc-name {
+                flex-shrink: 1;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+            }
+        }
+    }
+
     &:hover {
         cursor: pointer;
         background-color: rgb(244, 244, 244);
@@ -111,7 +117,7 @@ textarea {
 .update-icon {
     i {
         color: $primary;
-        font-size: 20px;
+        font-size: 30px;
     }
 }
 :host ::ng-deep {
