css school detail

--- a/src/app/features/post-login/school/school-create/school-create.component.html
+++ b/src/app/features/post-login/school/school-create/school-create.component.html
@@ -123,7 +123,9 @@
       </div>
     </div>
   </form>
-  <button pButton class="mb-2" (click)="confirm()" type="submit">Tạo</button>
+  <button pButton class="mb-2" (click)="confirm()" type="submit">
+    Tạo trường mầm non
+  </button>
   <!--<div class="overlay" *ngIf="isLoading">-->
   <!--    <div class="spinner-container">-->
   <!--        <div class="spinner-border" role="status"></div>-->
