--- a/src/app/features/post-login/school/school-detail/school-detail.component.scss
+++ b/src/app/features/post-login/school/school-detail/school-detail.component.scss
@@ -1,4 +1,18 @@
-
+@import "../../../../../assets/scss/base.scss" ;
+* {
+  font-size: 16px;
+}
 .font-weight-bold {
   font-weight: bold;
+}
+.p-button {
+  background-color: $primary;
+  border-radius: 8px;
+  border: solid 1px $primary;
+  transition: all 0.5s ease;
+
+  &:hover {
+    background-color: $primary-hover;
+    border-color: $primary-hover;
+  }
 }
