Update user update UX UI

--- a/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
+++ b/src/app/features/post-login/assignment/assignment-tree-list/assignment-tree-list.component.html
@@ -113,6 +113,7 @@
           >
             <ng-template let-status pTemplate="item">
               <p-tag
+                [rounded]="true"
                 [severity]="getStatusSeverity(status.value)"
                 [value]="status.label"
               ></p-tag>
