--- a/src/app/features/post-login/user/user-create/user-create.component.scss
+++ b/src/app/features/post-login/user/user-create/user-create.component.scss
@@ -27,3 +27,14 @@
   width: 100%;
   border-radius: 8px;
 }
+
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  .p-button {
+    width: 120px;
+    margin-left: 30px;
+  }
+}
