--- a/src/app/features/post-login/user/user-update/user-update.component.scss
+++ b/src/app/features/post-login/user/user-update/user-update.component.scss
@@ -1,19 +1,44 @@
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
+@import "../../../../../assets/scss/base";
+
+*{
+  font-size: 16px;
+}
+
+.p-inputtext,
+.p-inputtextarea,
+.p-dropdown {
+  border-radius: 8px;
+}
+
+:host ::ng-deep {
+  .p-button {
+    background-color: $primary;
+    border-radius: 8px;
+    border: solid 1px $primary;
+    transition: all 0.5s ease;
+    &:hover {
+      background-color: $primary-hover;
+      border-color: $primary-hover;
+    }
+  }
+}
+
+::ng-deep .p-dropdown{
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Add transparency to the overlay */
-  z-index: 9999; /* Set a high z-index to ensure it's on top of other elements */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  border-radius: 8px;
 }
 
-.spinner-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.span-heading-color{
+  color: #616161;
 }
 
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  .p-button {
+    width: 120px;
+    margin-left: 30px;
+  }
+}
